Random mock et StrategieDonnantPourDeuxDonnants et StrategieDonnantPourDeuxDonnantsAleatoire